Update README.adoc w/ new build instrs

--- a/README.adoc
+++ b/README.adoc
@@ -51,7 +51,7 @@ NOTE: The build output directory can be changed by modifying the exported `BUILD
 3. The newly created `build` directory in the root of the project contains the executable
 
 ....
-> cd build
+> cd .\build\Release\
 > gfs.exe
 ....
 
